<resources>
    <string name="app_name">Recettes</string>
    <string name="title_activity_recette">RecetteActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="welcome_to_application_name">Bienvenue dans Batch Cooking</string>
    <string name="name">Nom</string>
    <string name="imageUrl">Image url</string>
    <string name="delete">Supprimer</string>
    <string name="recipes">Recettes</string>
    <string name="recipeImport">Importer une recette</string>
    <string name="importByUrl">Importer par url</string>
    <string name="importBySdcard">Imporer via la sdcard</string>
    <string name="cancel">Annuler</string>
    <string name="ok">OK</string>
    <string name="general">Général</string>
    <string name="ingredients">Ingrédients</string>
    <string name="steps">étapes</string>
    <string name="ingredient">ingredient</string>
    <string name="notNow">Pas maintenant</string>
    <string name="enterQuantity">Entrez la quantité</string>
    <string name="quantity">quantité</string>
    <string name="unit">unité</string>
    <string name="addStep">Ajouter une étape</string>
    <string name="category">Catégorie</string>
    <string name="tags">Tags</string>
    <string name="preparation_time">Temps de préparation</string>
    <string name="cooking_time">Temps de cuisson</string>
    <string name="total_time">Temps total</string>
    <string name="nb_couverts">Nombre de couverts</string>
    <string name="handle_category">Gérer les catégories</string>
    <string name="shopping_list">Liste de courses</string>
    <string name="enter_ingredient_name">Entrez un nom d\'ingrédient</string>
    <string name="create_a_recipe">Créer une recette</string>
    <string name="add_to_shopping_list">Ajouter à la liste de courses</string>
    <string name="none_ingredient_to_add_shopping_list">Aucun ingrédient à ajouter à la liste de course</string>
    <string name="ingredients_from_recipe_added_to_shopping_list">Les ingrédients de la recette ont été ajouté à la liste de course</string>
    <string name="ingredients_from_recipe_group_added_to_shopping_list">Les ingrédients du groupe de recettes ont été ajouté à la liste de course</string>
    <string name="your_recipe_has_no_name">Votre recette n\'a pas de nom</string>
    <string name="update_in_ingredient_list_not_saved">Des modifications dans la liste d\'ingrédients n\'ont pas encore été sauvegardé</string>
    <string name="delete_category">Supprimer la catégorie</string>
    <string name="delete_recipe">Supprimer la recette</string>
    <string name="delete_selected_category">Supprimer les catégories sélectionnées</string>
    <string name="no_category_selected">Aucune catégorie n\'est selectionnée</string>
    <string name="clear_shopping_list">Vider la liste de course</string>
    <string name="shopping_list_already_clear">La liste de courses est déja vide</string>
    <string name="shopping_list_cleared">Liste de course vidée</string>
    <string name="application_name">Batch Cooking</string>
    <string name="delete_group_recipe">Supprimer le groupe de recette</string>
    <string name="none_recipe_to_add_shopping_list">Aucune recette à ajouter à la liste de course</string>
    <string name="recipe_already_in_group">La recette est déja présente dans le groupe</string>
    <string name="recipe_group">Groupe de recettes</string>
    <string name="clear_recipes_list">Vider la liste de recettes</string>
    <string name="recipe_list_already_clear">La liste de recettes est déja vide</string>
    <string name="recipes_list_cleared">Liste de recettes a été vidé</string>
    <string name="url_video">URL de la vidéo</string>
    <string name="url_not_valid">L\'url renseignée n\'est pas valide</string>
    <string name="please_inform_url">Veuillez renseigner une url</string>
    <string name="site_not_allowed">Le site n\'est pas géré par l\'application</string>
    <string name="url_to_import">Url du site à importer</string>
    <string name="import_from_bookmarks_file">Importer à partir d\'un fichier de favoris</string>
    <string name="delete_all_recipes">Supprimer toutes les recettes</string>
    <string name="loading">Chargement</string>
    <string name="currently_loading_file">Nous sommes en train de charger votre fichier, cela peut prendre un certain temps…</string>
    <string name="imported_recipes">recettes importées</string>
    <string name="sort_by_alpha">Trier par ordre alphabétique</string>
    <string name="filter">Filtrer</string>
    <string name="change_layout">Changer la disposition</string>
    <string name="filters">Filtres</string>
    <string name="filter_by_category">Filtrer par catégorie</string>
    <string name="select_all">Tout selectionner</string>
    <string name="edit_step">Modifier l\'étape</string>
    <string name="later">Plus tard</string>
    <string name="others">Autres</string>
    <string name="categories">Catégories</string>
    <string name="new_category">Nouvelle catégorie</string>
    <string name="see_video">Voir la vidéo</string>
    <string name="delete_image">Supprimer l\'image</string>
    <string name="url">Url</string>
    <string name="rating">Note</string>
    <string name="filter_by_rating">Filtrer par notes</string>
    <string name="import_from_url">Importer à partir d\'une url</string>
    <string name="choose_file">Choisir le fichier</string>
    <string name="new_tags">Nouveau tag</string>
    <string name="no_tags_selected">Aucun tag n\'est selectionné</string>
    <string name="delete_selected_elements">Supprimer les éléments selectionnés</string>
    <string name="filter_by_tags">Filtrer par tags</string>
</resources>
